--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ font-size:15px;
 line-height:1.5;
 padding:0;
 margin:0;
-background-color: #add8e6;
 }
 /*Global*/
 .container{
@@ -15,9 +14,9 @@ background-color: #add8e6;
 
 .cont{
   width:40%;
-  margin-top:110px;
-  margin-bottom:300px;
-  margin-left:450px;
+  margin:auto;
+  margin-bottom:310px;
+  margin-top:100px;
   overflow:hidden;
 }
 
